--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TravelBugs</title>
   </head>
@@ -11,6 +13,7 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
   </html>
+  
   
   
 
